--- a/client/dashboard/dashboard.html
+++ b/client/dashboard/dashboard.html
@@ -56,7 +56,7 @@
             <div layout><span flex class="md-subhead title">Confirm Installation</span>
             </div>
             <h5 flex="90">
-              <md-checkbox ng-model="status" ng-change="createConfirmation()" style="margin-left:.5rem;">
+              <md-checkbox ng-model="status" ng-change="createConfirmation()" style="margin-left:.5rem;" aria-label="confirmation box">
               </md-checkbox><span >I successfully installed this update.</span>
             </h5>
           </div>
@@ -114,7 +114,7 @@
         <span class="md-subhead">Select state:</span>
         <md-select ng-model="state" ng-change="StateSelection(state)" style="width:115px;"
                    aria-label="state selection">
-          <md-option ng-repeat="state in states" value="{{ state.id }}">{{ state.title }}</md-option>
+          <md-option ng-repeat="state in states" value="{{ state.uid }}">{{ state.title }}</md-option>
         </md-select>
       </div>
       <div layout layout-xs="column" layout-sm="column">
