--- a/client/index.html
+++ b/client/index.html
@@ -33,7 +33,7 @@
     <div flex-xs layout-xs layout-align-xs="center center" class="md-padding" id="logo-container">
       <div flex layout layout-align="start start"  layout-xs layout-align-xs="center center">
         <div style="height:44px;">
-          <img  src="hc-logo.png" alt="logo" class="logo" ng-cloak />
+          <img  src="HC_logo.png" alt="logo" class="logo" ng-cloak />
         </div>
       </div>
     </div>
